tests/cases/standard-library/ok/std-boxed-drop-value.ari
impl Drop for i64 {
  fn drop(self) -> void {
    return;
  }
}

fn main() -> i64 {
  var zone = zone::create(64);
  let boxed = std::boxed::new<i64>(ref mut zone, 21);

  drop boxed;

  zone::destroy(zone);
  return 0;
}
